--- a/style.css
+++ b/style.css
@@ -164,6 +164,125 @@ task {
     border: 1px solid #888;
     width: 15%; 
     border-radius: 10px;
+    z-index: 3;
 
+}
+
+.modal-ubermich{
+    display: none;
+    background-color: #d4e5f5;
+    position: absolute;
+    left: 5%;
+    top:20%;
+    right:55%;
+    bottom:30%;
+    /* width:100%; */
+    border: 2px solid rgba(0, 0, 0, 0.466);
+   
+}
+
+.ubermain  {
+    display: flex;
+    flex-direction: column;
+    margin: 0px auto;
+    align-items: center;
+    width: 90%;
+    height: 96%;
+    
+    
+
+}
+
+.ubermain h1, h2 {
+    padding: 20px;
+    color:rgb(17, 17, 87);
+    font-size: 2.5rem;
+}
+
+.ubermain p {
+    font-size: 1.4rem;
+}
+
+.oberebar {
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:100%;
+    height:6%;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 66%, rgba(0,212,255,1) 100%);
+    
+}
+
+.window-left {
+    color: white;
+    padding-left: 10px;
+    font-size:80%;
+    font-weight: 700;
+}
+
+.window-right {
+    padding-right: 10px;
+    font-size:90%;
+    font-weight: 900;
+}
+
+.window-right:hover {
+    color:#888;
+    cursor: pointer;
+}
+
+@media screen  and (max-width: 1700px) {
+    .ubermain h1, h2 {
+        padding: 20px;
+        color:rgb(17, 17, 87);
+        font-size: 2.4rem;
+    }
+    
+    .ubermain p {
+        font-size: 1.8rem;
+    }
+
+}
+
+@media screen and (max-width: 1400px) {
+    .ubermain h1, h2 {
+        padding: 20px;
+        color:rgb(17, 17, 87);
+        font-size: 1.5rem;
+    }
+    
+    .ubermain p {
+        font-size: 1.4rem;
+        text-align: center;
+    }
+    
+}
+
+@media screen and (max-width: 1000px) {
+    .ubermain h1, h2 {
+        padding: 20px;
+        color:rgb(17, 17, 87);
+        font-size: 1.3rem;
+    }
+    
+    .ubermain p {
+        font-size: 1rem;
+    }
+    
+}
+
+@media screen and (max-width: 768px) {
+    .ubermain h1, h2 {
+        padding: 20px;
+        color:rgb(17, 17, 87);
+        font-size: 1rem;
+    }
+    
+    .ubermain p {
+        font-size: 0.9rem;
+    }
+    
 }
 
