--- a/style.css
+++ b/style.css
@@ -180,6 +180,70 @@ task {
     border: 2px solid rgba(0, 0, 0, 0.466);
    
 }
+.modal-arbeiten{
+    display: none;
+    background-color: #000000;
+    position: absolute;
+    left: 10%;
+    top:10%;
+    right:40%;
+    bottom:20%;
+    /* width:100%; */
+    border: 2px solid rgba(0, 0, 0, 0.466);
+   
+}
+
+.arbeit-main {
+    width: 100%;
+    height: calc(100% - 40px);
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    gap: 5px;
+}
+
+.arbeit-main .container1 {
+    background-image: url('cloq.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+.arbeit-main .container2 {
+    background-image: url('deepl.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+.arbeit-main .container3 {
+    background-image: url('cloq-eng.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+.arbeit-main .container4 {
+    background-image: url('testemonial.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+.arbeit-main .container5 {
+    background-image: url('analog_clock.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
+.arbeit-main .container6 {
+    background-image: url('advice_generator.PNG');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+}
 
 .ubermain  {
     display: flex;
@@ -196,11 +260,11 @@ task {
 .ubermain h1, h2 {
     padding: 20px;
     color:rgb(17, 17, 87);
-    font-size: 2.5rem;
+    font-size: 5vh;
 }
 
 .ubermain p {
-    font-size: 1.4rem;
+    font-size: 2.5vh;
 }
 
 .oberebar {
@@ -209,7 +273,7 @@ task {
     justify-content: space-between;
     align-items: center;
     width:100%;
-    height:6%;
+    height: 40px;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 66%, rgba(0,212,255,1) 100%);
     
@@ -218,22 +282,22 @@ task {
 .window-left {
     color: white;
     padding-left: 10px;
-    font-size:80%;
+    font-size:3vh;
     font-weight: 700;
 }
 
-.window-right {
+.window-right, .window-right1 {
     padding-right: 10px;
-    font-size:90%;
+    font-size:3vh;
     font-weight: 900;
 }
 
-.window-right:hover {
+.window-right:hover, .window-right1:hover {
     color:#888;
     cursor: pointer;
 }
 
-@media screen  and (max-width: 1700px) {
+/* @media screen  and (max-width: 1700px) {
     .ubermain h1, h2 {
         padding: 20px;
         color:rgb(17, 17, 87);
@@ -284,5 +348,5 @@ task {
         font-size: 0.9rem;
     }
     
-}
+} */
 
